// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reactCSS should autoprefix css 1`] = `
<div
  className="body"
  style={
    Object {
      "MozTransition": "0.3s ease-in-out",
      "WebkitTransition": "0.3s ease-in-out",
      "display": Array [
        "-webkit-box",
        "-moz-box",
        "-ms-flexbox",
        "-webkit-flex",
        "flex",
      ],
      "transition": "0.3s ease-in-out",
    }
  }
/>
`;

exports[`reactCSS should return complex css 1`] = `
<div>
  <div
    className="card"
    style={
      Object {
        "boxShadow": "0 4px 8px rgba(0,0,0,.15)",
      }
    }
  />
</div>
`;

exports[`reactCSS should return multiple css 1`] = `
<div>
  <div
    className="title"
    style={
      Object {
        "color": "red",
      }
    }
  />
  <div
    className="card"
    style={
      Object {
        "boxShadow": "0 0 2px rgba(0,0,0,.1)",
      }
    }
  />
</div>
`;

exports[`reactCSS should return simple css 1`] = `
<div
  className="body"
  style={
    Object {
      "backgroundColor": "#fafafa",
    }
  }
/>
`;
